----------
v6.1.3-git
----------

[mms] Fix updating when changing sort direction in search mailboxes (Bug
      #12369).


------
v6.1.2
------

[mms] Fix saving S/MIME certificate to addressbook when message is both signed
      & encrypted (Bug #12354).
[jan] Fix displaying photos in rendered vCard files.
[jan] Fix detecting capability to list users if called via RPC (Bug #12305).
[mms] Clear cached previews in dynamic view when changing or refreshing a
      search mailbox (Bug #12349).
[mms] Fix adding an HTML trailer to a compose message.
[mms] Fix regression preventing ACLs from being added (Bug #12346).
[mms] More fixes for regressions in linked attachment behavior.


------
v6.1.1
------

[mms] Fixes for regressions in linked attachment behavior.
[mms] Catch invalid characters in user-defined flag names (Bug #12335).
[mms] Workaround IE javascript limitations preventing attachments from being
      uploaded in dynamic view.
[mms] Remember mailbox list position when viewing messages in smartmobile view.
[mms] Fix handling unsuccessful mailbox import in dynamic view.
[mms] Mailbox imports are now limited to 2500 messages by default.
[mms] Fix adding addresses from the contacts popup in certain situations (Bug
      #12312).
[jan] Fix fatal error when importing a PGP key (Bug #12318).
[mms] Fix regressions in navigation arrow links on basic message page.
[mms] Fix regression preventing Virtual Inbox from refreshing once opened in
      dynamic view (Bug #12304).
[mms] Don't show option to add senders to safe images list if the current
      address cannot be added to the safe list.
[mms] Don't log authentication exception messages from the IMAP library;
      authentication failures are already logged by the authentication code.


------
v6.1.0
------

[mms] Fix fatal error when importing a S/MIME key (Bug #12290).
[mms] Fixed segfaults caused by SMTP debugging.


---------
v6.1.0RC1
---------
