@@ -2,6 +2,8 @@
 v6.1.3-git
 ----------
 
+[mms] Fix parsing signed & encrypted S/MIME messages sent from Outlook
+      2007/2010 (Bug #12374).
 [mms] Fix updating when changing sort direction in search mailboxes (Bug
       #12369).
 
